# ESG-Audit

./: .env.example  .gitignore  README.md  celerybeat-schedule  pyproject.toml  requirements.txt
agents/: __init__.py  data_ingestion.py  hybrid_fusion.py  ml_risk_modeler.py  orchestrator.py  report_generator.py  validation_explainer.py  zero_shot_analyzer.py
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routers/: __init__.py  audit.py  health.py  reports.py
core/: celery_app.py  config.py  database.py  logging.py
data/: faiss_index.faiss  faiss_index_meta.pkl  sample_esg_data.csv
esg_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker  docker-compose.prod·yml  docker-compose.yml
infra/k8s/: api-deployment.yaml  ingress.yaml  worker-deployment.yaml
ml/: __init__.py  feature_engineering.py  inference.py  train.py
ml/models/: esg_xgb_v1.pkl  feature_pipeline.pkl  training_metrics.json
monitoring/: grafana_dashboard.json  prometheus.yml
tasks/: __init__.py  audit_pipeline.py  model_retrain.py
templates/: esg_report.html.j2  executive_summary.md.j2
tests/: conftest.py
tests/integration/: test_agent_pipeline.py  test_api_endpoints.py
tests/unit/: test_fusion.py  test_ml_modeler.py  test_zero_shot.py
tools/: __init__.py  data_loaders.py  embedding_engine.py  report_renderer.py  shap_explainer.py  vector_store.py
ui/: app.py
ui/components/: esg_heatmap.py  risk_gauge.py
ui/pages/: audit_request.py  dashboard.py  report_viewer.py
